--- a/Debug/makefile
+++ b/Debug/makefile
@@ -62,7 +62,7 @@ main-build: Tuto_UART_REG_G031_002.elf secondary-outputs
 
 # Tool invocations
 Tuto_UART_REG_G031_002.elf Tuto_UART_REG_G031_002.map: $(OBJS) $(USER_OBJS) C:\Users\mzeml\embedded\Tuto_UART_REG_G031_002\STM32G031K8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Tuto_UART_REG_G031_002.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m0plus -T"C:\Users\mzeml\embedded\Tuto_UART_REG_G031_002\STM32G031K8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Tuto_UART_REG_G031_002.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "Tuto_UART_REG_G031_002.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m0plus -T"C:\Users\mzeml\embedded\Tuto_UART_REG_G031_002\STM32G031K8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Tuto_UART_REG_G031_002.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -u _printf_float -u _scanf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
